# cynfig

./: .gitignore  CMakeLists.txt  fc20_build_notes.txt  invoke.txt  notes.txt  win8-cmake-invoke.txt
ETL/: AUTHORS  CMakeLists.txt  ETL.pc.in
ETL/ETL/: CMakeLists.txt  _clock_system.h  _clock_win32hpcount.h  _mutex_win32.h  _rect.h  _stringf.h  _thread.h  etl_profile.h  etl_profile.h.in
cmake/Modules/: FindAVCodec.cmake  FindAVFormat.cmake  FindAVUtil.cmake  FindAtkmm.cmake  FindCairomm.cmake  FindFontconfig.cmake  FindFreeType2.cmake  FindFreetype.cmake  FindGDKmm.cmake  FindGIOmm.cmake  FindGTK.cmake  FindGTKmm.cmake  FindGlib.cmake  FindGlibmm.cmake  FindImageMagickpp.cmake  FindLibDV.cmake  FindLibXML++.cmake  FindLibXML2.cmake  FindOpenEXR.cmake  FindPangomm.cmake  FindPng.cmake  FindSWScale.cmake  FindSigC++.cmake  source.txt
synfig-core/: AUTHORS  CMakeLists.txt  README  invoke.txt  synfig.pc.in
synfig-core/src/: CMakeLists.txt  config.h.in
synfig-core/src/modules/: CMakeLists.txt  synfig_modules.cfg  synfig_modules.cfg.in
synfig-core/src/modules/lyr_freetype/: CMakeLists.txt  lyr_freetype.cpp
synfig-core/src/modules/lyr_std/: CMakeLists.txt  booleancurve.cpp  supersample.cpp  timeloop.cpp
synfig-core/src/modules/mod_bmp/: CMakeLists.txt
synfig-core/src/modules/mod_dv/: CMakeLists.txt
synfig-core/src/modules/mod_example/: CMakeLists.txt  simplecircle.cpp
synfig-core/src/modules/mod_ffmpeg/: CMakeLists.txt
synfig-core/src/modules/mod_filter/: CMakeLists.txt
synfig-core/src/modules/mod_geometry/: CMakeLists.txt  circle.cpp
synfig-core/src/modules/mod_gif/: CMakeLists.txt
synfig-core/src/modules/mod_gradient/: CMakeLists.txt  conicalgradient.cpp
synfig-core/src/modules/mod_imagemagick/: CMakeLists.txt
synfig-core/src/modules/mod_magickpp/: CMakeLists.txt  trgt_magickpp.cpp
synfig-core/src/modules/mod_mng/: CMakeLists.txt
synfig-core/src/modules/mod_noise/: CMakeLists.txt
synfig-core/src/modules/mod_openexr/: CMakeLists.txt
synfig-core/src/modules/mod_particle/: CMakeLists.txt  plant.cpp
synfig-core/src/modules/mod_png/: CMakeLists.txt
synfig-core/src/modules/mod_ppm/: CMakeLists.txt
synfig-core/src/modules/mod_svg/: CMakeLists.txt  svg_parser.cpp
synfig-core/src/modules/mod_yuv420p/: CMakeLists.txt
synfig-core/src/synfig/: .color.cpp.kate-swp  CMakeLists.txt  Makefile.am  cairo_operators.cpp  cairo_operators.h  cairoimporter.h  canvas.cpp  canvas.h  color.cpp  color.h  context.h  filecontainer.h  filecontainerzip.cpp  filecontainerzip.h  filesystem.h  filesystemgroup.h  filesystemnative.h  general.h  guid.cpp  guid.h  importer.h  layer.cpp  layer.h  layer_pastecanvas.cpp  loadcanvas.cpp  loadcanvas.h  main.cpp  main.h  module.cpp  module.h  mutex.cpp  node.cpp  node.h  renddesc.h  savecanvas.cpp  savecanvas.h  synfig_api.h  target.h  time.cpp  time.h  (+10 more)
synfig-core/src/tool/: CMakeLists.txt  joblistprocessor.cpp  main.cpp  optionsprocessor.cpp
synfig-studio/: AUTHORS  CMakeLists.txt  README
synfig-studio/src/: CMakeLists.txt  config.h.in
synfig-studio/src/gui/: CMakeLists.txt  app.cpp  canvasview.cpp  iconcontroller.cpp  instance.cpp  ipc.cpp  onemoment.cpp  render.cpp  splash.cpp
synfig-studio/src/gui/cellrenderer/: cellrenderer_timetrack.cpp  cellrenderer_value.cpp
synfig-studio/src/gui/dialogs/: about.cpp  dialog_setup.cpp  dialog_targetparam.cpp  dialog_waypoint.cpp
synfig-studio/src/gui/dials/: framedial.cpp  keyframedial.cpp  zoomdial.cpp
synfig-studio/src/gui/docks/: dock_timetrack.cpp
synfig-studio/src/gui/states/: state_width.cpp
synfig-studio/src/gui/trees/: childrentree.cpp  childrentreestore.cpp  layertree.cpp
synfig-studio/src/gui/widgets/: widget_compselect.cpp  widget_curves.cpp  widget_enum.cpp  widget_value.cpp  widget_waypoint.cpp  widget_waypointmodel.cpp
synfig-studio/src/gui/workarearenderer/: renderer_ducks.cpp
synfig-studio/src/synfigapp/: CMakeLists.txt  action.h  action_param.h  blineconvert.cpp  cvs.cpp  inputdevice.cpp  pluginmanager.cpp  settings.cpp  settings.h
